--- a/index.html
+++ b/index.html
@@ -5,7 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+<style>
+  body, html{
+  height: 100%;
+  width: 100%;
+}
+
+.carousel {
+  position: relative;
+  width: 100%;
+  height:100%;
+  overflow: hidden;
+  background-color: #cdcdcd;
+  
+}
+.carousel .carousel-item {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 100%;
+}
+.carousel .carousel-item.active {
+  left: 0;
+  transition: all 0.3s ease-out;
+}
+.carousel .carousel-item div {
+  height: 100%;
+  width: 100%;
+}
+.carousel .carousel-item .red {
+  background-color:white;
+}
+.carousel .carousel-item .green {
+  background-color:white;
+}
+.carousel .carousel-item .yellow {
+  background-color: white;
+}
+.carousel .carousel-item .violet {
+  background-color:white;
+}
+</style>
 </head>
 <body>
     <div class="carousel">
@@ -32,6 +73,31 @@
         </div>
       </div>
       <!-- <button id="test" type="button" style="margin-top: 15px;">test</button> -->
-      <script src="script.js"></script>
+      <script >
+        window.onload = function(){
+    var slides = document.getElementsByClassName('carousel-item'),
+        addActive = function(slide) {slide.classList.add('active')},
+        removeActive = function(slide) {slide.classList.remove('active')};
+    addActive(slides[0]);
+    
+    setInterval(function (){
+      for (var i = 0; i < slides.length; i++){
+        if (i + 1 == slides.length) {
+          addActive(slides[0]);
+          slides[0].style.zIndex = 100;
+          setTimeout(removeActive, 350, slides[i]); //Doesn't be worked in IE-9
+          break;
+        }
+        if (slides[i].classList.contains('active')) { 
+          slides[i].removeAttribute('style');
+          setTimeout(removeActive, 350, slides[i]); //Doesn't be worked in IE-9
+          addActive(slides[i + 1]);
+          break;
+        }
+      } 
+    }, 300000);
+  }
+    
+      </script>
 </body>
 </html>
