--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
         </div>
         <div class="carousel-item">
           <div class="green"> 
-            <iframe width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ0ZTE4MWUtNWIyMy00OTk5LTkyNDItNjdmZDVmNGJmMmE2IiwidCI6ImRlMTNjOTNlLTdlYjItNDAzMi1hNDcxLTJkYzE2NDRlMmU2NSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe> 
-          </div>
+            <iframe width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ0ZTE4MWUtNWIyMy00OTk5LTkyNDItNjdmZDVmNGJmMmE2IiwidCI6ImRlMTNjOTNlLTdlYjItNDAzMi1hNDcxLTJkYzE2NDRlMmU2NSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>          </div>
         </div>
         <div class="carousel-item">
           <div class="yellow">
@@ -67,8 +66,7 @@
         </div>
         <div class="carousel-item">
           <div class="violet">
-            <iframe width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ0ZTE4MWUtNWIyMy00OTk5LTkyNDItNjdmZDVmNGJmMmE2IiwidCI6ImRlMTNjOTNlLTdlYjItNDAzMi1hNDcxLTJkYzE2NDRlMmU2NSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe> 
-
+            <iframe width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ0ZTE4MWUtNWIyMy00OTk5LTkyNDItNjdmZDVmNGJmMmE2IiwidCI6ImRlMTNjOTNlLTdlYjItNDAzMi1hNDcxLTJkYzE2NDRlMmU2NSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe> 
           </div>
         </div>
       </div>
