--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <!-- <button id="test" type="button" style="margin-top: 15px;">test</button> -->
-<!--      <script >
+     <script >
         window.onload = function(){
     var slides = document.getElementsByClassName('carousel-item'),
         addActive = function(slide) {slide.classList.add('active')},
@@ -96,6 +96,6 @@
     }, 180000);
   }
     
-      </script> -->
+      </script> 
 </body>
 </html>
